# dotenv

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: main_branch.yml  nightly.yml  pull_request.yml  release.yml
cli/: main.cpp
cmake/: dotenv-config.cmake.in
include/: dotenv.hpp
include/collab/: env.hpp
include/collab/env/: env_var.hpp  load.hpp  parse.hpp  version.hpp
include/dotenv/: environment_variable.hpp  load.hpp  parse.hpp  version.hpp
smoke/: CMakeLists.txt  tests.cpp  vcpkg-configuration.json  vcpkg.json  xmake.lua
src/: expand.cpp  expand.hpp  load.cpp  merge.cpp  merge.hpp  parse_dotenv.cpp  parse_json.cpp  parse_yaml.cpp
tests/: test_apply.cpp  test_cli.cpp  test_expand.cpp  test_load.cpp  test_merge.cpp  test_parse_dotenv.cpp  test_parse_json.cpp  test_parse_yaml.cpp  xmake.lua
xmake/: collab.lua
